--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "reliese/laravel": "^0.0.13",
         "sammyk/laravel-facebook-sdk": "^3.5"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0",
-        "reliese/laravel": "^0.0.13"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
