--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "reliese/laravel": "^0.0.13",
-        "sammyk/laravel-facebook-sdk": "^3.5"
+        "sammyk/laravel-facebook-sdk": "^3.5",
+        "yish/laravel-facebook-php-ads-sdk": "^2.6"
     },
     "require-dev": {
         "appzcoder/crud-generator": "^3.0",
